// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs tabs should match snapshot and display lengths if isLoading prop equal false 1`] = `
<div>
  <div
    class="sc-ehmTmK deDLQu"
  >
    <span
      class="sc-lbOyJj esoaLR"
    >
      pokemons
       
      (10)
    </span>
    <span
      class="sc-lbOyJj hMluIu"
    >
      moves
       
      (15)
    </span>
    <span
      class="sc-lbOyJj hMluIu"
    >
      types
       
      (20)
    </span>
  </div>
</div>
`;

exports[`Tabs tabs should match snapshot and should not display lengths if isLoading prop equals true 1`] = `
<div>
  <div
    class="sc-ehmTmK deDLQu"
  >
    <span
      class="sc-lbOyJj esoaLR"
    >
      pokemons
       
    </span>
    <span
      class="sc-lbOyJj hMluIu"
    >
      moves
       
    </span>
    <span
      class="sc-lbOyJj hMluIu"
    >
      types
       
    </span>
  </div>
</div>
`;
